# UNIVER

./: .gitignore  README.md
course works/: Задание. Курсовая работа. Разработка прогрессивных веб-приложений.docx  Курсовая работа. Разработка прогрессивных веб-приложений.docx
semestr 1/History/: РЕФЕРАТ ПЕТРОВ А,А..pptx
semestr 3/Computer architecture [Buza&Zhurahovskiy, C++]/: 649.docx  АК. Реферат.docx  К современным мобильным устройствам относят прежде всего смартфоны и планшетные компьютеры.docx
semestr 3/Computer architecture [Buza&Zhurahovskiy, C++]/MPI_1/: CMakeLists.txt  Process.cpp  Process.h  main.cpp
semestr 3/Computer architecture [Buza&Zhurahovskiy, C++]/MPI_2/: CMakeLists.txt  main.cpp
semestr 3/Computer architecture [Buza&Zhurahovskiy, C++]/MPI_3/: CMakeLists.txt  main.cpp
semestr 3/Software quality testing and evaluation [Kvasha]/: ТОК_ПО КСР. Практическая часть.docx  ТОК_ПО КСР. Теоретическая часть.docx  ТОК_ПО Отчет ЛР1.docx  ТОК_ПО Отчет ЛР2.1.docx  ТОК_ПО Отчет ЛР2.2.docx  ТОК_ПО Отчет ЛР3.docx  ТОК_ПО Отчет ЛР4.docx  ТОК_ПО Отчет ЛР5.1.docx  ТОК_ПО Отчет ЛР5.2.docx  ТОК_ПО Отчет ЛР6.docx
semestr 3/System programming [Goshko, C]/: Lab4_report.docx
semestr 4/Computer networks [Goryachkin]/: Description.md
semestr 4/Design of software systems (PRPS) [Zen'ko]/: 14_Петров_Андрей_ЛР1_ПрПС.docx  14_Петров_Андрей_ЛР2_ПрПС.docx  14_Петров_Андрей_ЛР3_ПрПС.docx  14_Петров_Андрей_ЛР4_ПрПС.docx  14_Петров_Андрей_ПрПС_ALL_LABS.docx
semestr 4/Mathematical modeling/: 14_labOtchet_Petrov.doc  UML Реферат Петров А.А. 14 группа 2 курс.docx
(+1200 files in other folders)
